// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unknown plugin adds _component, _path to modules: adds _component, _path to modules 1`] = `

export default {
  port: 8080,
  modules: [
    {
      module: "a-module",
      position: "top_right"
    }
  ]
};

      ↓ ↓ ↓ ↓ ↓ ↓

export default {
  port: 8080,
  modules: [
    {
      module: "a-module",
      _component: require("react").lazy(() =>
        import(
          /* webpackChunkName: "a-module" */

          /* webpackPreload: true */
          "<PROJECT_ROOT>/src/babel/transform-config/__tests__/modules/a-module/a-module.js"
        )
      ),
      _path:
        "<PROJECT_ROOT>/src/babel/transform-config/__tests__/modules/a-module/a-module.js",
      position: "top_right",
    },
  ],
};


`;

exports[`unknown plugin bails if .disabled === true: bails if .disabled === true 1`] = `

export default {
  modules: [
    {
      module: "a-module",
      disabled: true
    }
  ]
};

      ↓ ↓ ↓ ↓ ↓ ↓

export default {
  modules: [
    {
      module: "a-module",
      disabled: true,
    },
  ],
};


`;

exports[`unknown plugin doesn't search if option \`modulesPath\` is specified: doesn't search if option \`modulesPath\` is specified 1`] = `

export default {
  modules: [
    {
      module: "the-module"
    }
  ]
};

      ↓ ↓ ↓ ↓ ↓ ↓

export default {
  modules: [
    {
      module: "the-module",
      _component: require("react").lazy(() =>
        import(
          /* webpackChunkName: "the-module" */

          /* webpackPreload: true */
          "<PROJECT_ROOT>/src/babel/transform-config/__tests__/custom-modules/the-module/index.js"
        )
      ),
      _path:
        "<PROJECT_ROOT>/src/babel/transform-config/__tests__/custom-modules/the-module/index.js",
    },
  ],
};


`;

exports[`unknown plugin resolves default modules: resolves default modules 1`] = `

export default {
  modules: [
    {
      module: "a-default-module"
    }
  ]
};

      ↓ ↓ ↓ ↓ ↓ ↓

export default {
  modules: [
    {
      module: "a-default-module",
      _component: require("react").lazy(() =>
        import(
          /* webpackChunkName: "a-default-module" */

          /* webpackPreload: true */
          "<PROJECT_ROOT>/src/babel/transform-config/__tests__/modules/default/a-default-module/a-default-module.js"
        )
      ),
      _path:
        "<PROJECT_ROOT>/src/babel/transform-config/__tests__/modules/default/a-default-module/a-default-module.js",
    },
  ],
};


`;
